fixed width of text bubble on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ body {
         font-size: 4rem; } }
     @media only screen and (max-width: 37.5em) {
       .main__info-bubble {
-        width: 60%; } }
+        width: 65%; } }
     .main__info-bubble::after {
       content: "";
       border-top: 2rem solid #fff;
