--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -106,7 +106,7 @@
       font-size: 4rem;
     }
     @media only screen and (max-width: $bp-medium) {
-      width: 60%;
+      width: 65%;
     }
 
     &::after {
